--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,9 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyString
+  name: Sport
+  description: Sport description
 
 two:
-  name: MyString
-  description: MyString
+  name: Sport_2
+  description: Sport_2 description
+
+<% (3..10).each do |n| %>
+cat_<%=n>:
+  name: Sport_<%= n %>
+  description: Sport_<%= n %> description
+<% end %>
